<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:layout_height="match_parent" 
    android:theme="@android:style/Theme.NoTitleBar">

    <ImageButton
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_final"
        />
        
    <TextView
        android:id="@+id/label_lat_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lat_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_lat_lng"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/label_lat_lng"
        android:textIsSelectable="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_lat_lng"
        android:text="@string/address"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/address_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lat_lng"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_address"
        android:layout_below="@+id/lat_lng"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/label_address"
        android:textIsSelectable="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/address"
        android:text="@string/unknown"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/text_connection_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_connection_status"
        android:text="@string/unknown"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_connection_state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="getLocation"
        android:text="@string/get_location" />

    <Button
        android:id="@+id/start_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_address_button"
        android:layout_centerHorizontal="true"
        android:onClick="startUpdates"
        android:text="@string/start_updates" />

    <Button
        android:id="@+id/get_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_location_button"
        android:layout_centerHorizontal="true"
        android:onClick="getAddress"
        android:text="@string/get_address" />

    <Button
        android:id="@+id/stop_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/start_updates"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="stopUpdates"
        android:text="@string/stop_updates" />



       <ProgressBar
           android:id="@+id/progressBar1"
           style="?android:attr/progressBarStyleHorizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/stop_updates"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="18dp"
           android:indeterminate="false"
           android:max="100"
           android:minHeight="50dp"
           android:minWidth="200dp"
           android:progress="1" />

</LinearLayout >